--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.12",
-    "react-native": "0.48.2",
+    "react-native": "^0.48.2",
+    "react-native-button": "^2.1.0",
+    "react-native-motion-manager": "github:exposio/react-native-motion-manager",
     "react-native-sensor-manager": "^0.1.10"
   },
   "devDependencies": {
