--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.2",
     "react-native-button": "^2.1.0",
-    "react-native-motion-manager": "github:exposio/react-native-motion-manager",
-    "react-native-sensor-manager": "^0.1.10"
+    "react-native-motion-manager": "github:kennethjiang/react-native-motion-manager"
   },
   "devDependencies": {
     "babel-jest": "21.0.0",
