--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "react": "16.0.0-alpha.12",
     "react-native-button": "^2.1.0",
-    "react-native-motion-manager": "github:kennethjiang/react-native-motion-manager"
+    "react-native-motion-manager": "github:kennethjiang/react-native-motion-manager#reactversion"
   },
   "devDependencies": {
     "babel-jest": "21.0.0",
