--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native-kill-packager; node node_modules/react-native/local-cli/cli.js start",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "android": "react-native run-android",
     "android:restart": "react-native-kill-packager; react-native run-android",
     "packager:kill": "react-native-kill-packager",
